--- a/algo.css
+++ b/algo.css
@@ -10,3 +10,99 @@ table{
 #info{
     margin-top: 20px;
 }
+
+#tirage{
+    text-align: center;
+}
+
+#launch-button{
+    margin-bottom: 20px;
+    
+}
+
+
+#launch-button {
+  padding: 0.6em 2em;
+  border: none;
+  outline: none;
+  color: rgb(255, 255, 255);
+  background: #111;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+#launch-button:before {
+  content: "";
+  background: linear-gradient(
+    45deg,
+    #ff0000,
+    #ff7300,
+    #fffb00,
+    #48ff00,
+    #00ffd5,
+    #002bff,
+    #7a00ff,
+    #ff00c8,
+    #ff0000
+  );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing-button-85 20s linear infinite;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+}
+
+@keyframes glowing-button-85 {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
+#launch-button:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #222;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+}
+
+#grid_size{
+  margin-right: 20px;
+  border-image-source: linear-gradient(
+    45deg,
+    #472828,
+    #ac8566,
+    #dbda86,
+    #88a77c,
+    #7bbeb3,
+    #7a83b1,
+    #9278ae,
+    #684561,
+    #d38080
+  );
+  border-width: 2pt;
+  border-image-slice: 1;
+  text-align: center;
+}
